--- a/Front-end/InsertRecord.html
+++ b/Front-end/InsertRecord.html
@@ -11,11 +11,11 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
   		<script src="verify.js"></script>
   		<script src="gideonApp.js"></script>
   		<script src="insertRecordCtrl.js"></script>
-		<script src="ripple.js"></script>
+		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -25,7 +25,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
 		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
 		<link rel="stylesheet" type="text/css" href="RecordStyle.css">
 	</head>
@@ -35,81 +35,89 @@
 		</div>
 
 		<div class="exterior" ng-controller="insertRecordCtrl">
-			<button invis class="hoverable" id="backButton" onclick="location.href='RecordList.html'">Back to Record List</button>
+			<md-button id="backButton" onclick="location.href='RecordList.html'">Back to Record List</md-button>
 
 			<h1>Insert Record</h1>
 			<!--Form used for adding a new record for an existing student into the database-->
 			<form name="form">
 				<!--Displays list of all current students upon selection, with a custom filter-->
-				<label for="client">Filter By Name: </label>
-					<input black id="textFilter" name="textFilter" type="text" ng-model="clientFilter">
-					<div class="inputWrapperBig">
-						<select white big id="clientSelect" name="client" ng-model="client" ng-options="v as v.name for v in names | filter: {name: clientFilter}" ng-change="setId()" required></select>
-						<div class="invalidContainer" ng-class="{'invalid':form.client.$touched && form.client.$invalid}"></div>
+				<md-autocomplete class="md-block" required md-require-match id="clientSelect" md-floating-label="Student" md-input-name="client" md-selected-item="client" md-search-text="clientSearch" md-items="item in filterStudents(clientSearch)" md-item-text="item.name">
+					<md-item-template>
+						<span md-highlight-text="clientSearch">{{item.name}}</span>
+					</md-item-template>
+					<div ng-messages="form.client.$error">
+						<div ng-message="required">Student is required.</div>
+						<div ng-message="md-require-match">Please select an existing student.</div>
 					</div>
-					<span class="errorText" ng-show="form.client.$touched && form.client.$invalid">Name is required.</span>
-	          	<br><br>
+				</md-autocomplete> 
 
-	  			<!--Displays all possible book categories-->
-				<label for="category">Book Category</label><br>
-					<div class="inputWrapperBig">
-						<select white big id="category" name="category" ng-model="record.category" ng-options="x for x in categories" ng-change="getSubcategories()" required>
-							<option value="" selected disabled hidden>Choose category</option>
-						</select>
-						<div class="invalidContainer" ng-class="{'invalid':form.category.$touched && form.category.$invalid}"></div>
+				  <!--Displays all possible book categories-->
+				<md-input-container class="md-block">
+					<label>Book Category</label>
+					<md-select id="category" name="category" ng-model="record.category" ng-change="getSubcategories()" required>
+						<md-option ng-repeat="x in categories" ng-value="x">{{x}}</md-option>
+					</md-select>
+					<div ng-messages="form.category.$error">
+						<div ng-message="required">All book details are required.</div>
 					</div>
-					<span class="errorText" ng-show="form.category.$touched && form.category.$invalid">Category is required.</span>
-				<br><br>
+				</md-input-container>
+				<br>
 
 				<!--Displays all subcategories for a selected category-->
-				<label for="subCategory">Book Sub-Category</label><br>
-					<div class="inputWrapperBig">
-						<select white big id="subCategory" name="subcategory" ng-model="record.subcategory" ng-options="y disable when y.startsWith('Select') for y in subcategories" ng-change="getTitles()" required>
-							<option value="">Choose subcategory</option>
-						</select>
-						<div class="invalidContainer" ng-class="{'invalid':form.subcategory.$touched && form.subcategory.$invalid}"></div>
+				<md-input-container class="md-block">
+					<label>Book Subcategory</label>
+					<md-select id="subcategory" name="subcategory" ng-model="record.subcategory" ng-change="getTitles()" required>
+						<md-option ng-repeat="y in subcategories" ng-value="y" ng-disabled="y.startsWith('Select')">{{y}}</option>
+					</md-select>
+					<div ng-messages="form.subcategory.$error">
+						<div ng-message="required">All book details are required.</div>
 					</div>
-					<span class="errorText" ng-show="form.subcategory.$touched && form.subcategory.$invalid">Subcategory is required.</span>
-				<br><br>
+				</md-input-container>
+				<br>
 
 				<!--Displays all book titles for a given subcategory-->
-				<label for="title">Book Title</label><br>
-					<div class="inputWrapperBig">
-						<select white big id="title" name="title" ng-model="record.title" ng-options="z.title as z.display disable when z.title.startsWith('Select') for z in titles" required>
-							<option value="">Choose title</option>
-						</select>
-						<div class="invalidContainer" ng-class="{'invalid':form.title.$touched && form.title.$invalid}"></div>
+				<md-input-container class="md-block">
+					<label>Book Title</label>
+					<md-select id="title" name="title" ng-model="record.title" required>
+						<md-option ng-repeat="z in titles" ng-value="z" ng-disabled="z.display.startsWith('Select')">{{z.display}}</option>
+					</md-select>
+					<div ng-messages="form.category.$error">
+						<div ng-message="required">All book details are required.</div>
 					</div>
-					<span class="errorText" ng-show="form.title.$touched && form.title.$invalid">Book title is required.</span>
-				<br><br>
+				</md-input-container>
+				<br>
 
 				<!--Simple datePicker for instructors to enter the startDate-->
-				<label for="dateSelect">Start Date</label><br>
-					<div class="inputWrapperBig">
-						<input white big type="date" name="startDate" id ="dateSelect" ng-model="record.startDate" required>
-						<div class="invalidContainer" ng-class="{'invalid':form.startDate.$touched && form.startDate.$invalid}"></div>
+				<md-input-container class="md-block">
+					<label>Start Date</label>
+					<md-datepicker class="inputWrapperBig" name="startDate" id="dateSelect" ng-model="record.startDate" required></md-datepicker>
+					<div ng-messages="form.startDate.$error">
+						<div ng-message="required">Start date is required.</div>
+						<div ng-message="valid">This date is invalid.</div>
 					</div>
-					<span class="errorText" ng-show="form.startDate.$touched && form.startDate.$error.required">Start date is required.</span>
-					<span class="errorText" ng-show="form.startDate.$touched && form.startDate.$error.date">This date is invalid.</span>
-				<br><br>
+				</md-input-container>
 
 				<!--Simple number picker for instructors to enter the repetition number-->
-				<label for="reps" id="reps">Repetition</label>
-					<div class="inputWrapper">
-						<input white type="number" name="reps" min="1" max="5" ng-model="record.rep" required>
-						<div class="invalidContainer" ng-class="{'invalid':form.reps.$touched && form.reps.$invalid}"></div>
+				<md-input-container>
+					<label>Repetition</label>
+					<input type="number" name="reps" min="1" max="5" ng-model="record.rep" required>
+					<div ng-messages="form.reps.$error">
+						<div ng-message="required">Repetition number is required.</div>
+						<div ng-message="number">Repetition must be a number.</div>
+						<div ng-message-exp="['min', 'max']">Repetition number must be between 1 and 5.</div>
 					</div>
-					<span class="errorText" ng-show="form.reps.$touched && form.reps.$error.required">Repetition number is required.</span>
-					<span class="errorText" ng-show="form.reps.$touched && form.reps.$error.number">Repetition must be a number.</span>
-					<span class="errorText" ng-show="form.reps.$touched && (form.reps.$error.min || form.reps.$error.max)">Repetition number must be between 1 and 5.</span>
-				<br><br>
+				</md-input-container>
+				<br>
 
-				<label for="notes" id="notes">Notes</label>
-					<textarea white rows="3" name="notes" id="notes" ng-model="record.notes"></textarea>
-				<br><br>
+				<!--Simple textarea for jotting down quick notes-->
+				<md-input-container>
+					<label>Notes</label>
+					<textarea rows="3" name="notes" id="notes" ng-model="record.notes"></textarea>
+				</md-input-container>
+				<br>
 				
 				<!--Submit button: runs the insertTask function-->
-				<button big ng-click="createRecord()">Submit</button>
+				<md-button big class="md-accent md-raised" ng-click="createRecord()">Submit</md-button>
 			</form>
 			<br><br>
 			<span ng-class="{'errorText':formStatus.id == 0, 'successText':formStatus.id == 1}">{{formStatus.text}}</span>
