--- a/Front-end/InsertStudent.html
+++ b/Front-end/InsertStudent.html
@@ -11,7 +11,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
   		<script src="verify.js"></script>
   		<script src="gideonApp.js"></script>
   		<script src="insertStudentCtrl.js"></script>
@@ -25,7 +25,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
 		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
 		<link rel="stylesheet" type="text/css" href="RecordStyle.css">
 	</head>
@@ -36,7 +36,7 @@
 
 		
 		<div class="exterior" ng-controller="insertStudentCtrl">
-			<md-button invis class="hoverable" id="backButton" onclick="location.href='StudentList.html'">Back to Student List</md-button>
+			<md-button id="backButton" onclick="location.href='StudentList.html'">Back to Student List</md-button>
 
 			<h1>Insert Student</h1>
 			<!--Form used for adding a new student into the database-->
@@ -55,7 +55,7 @@
 				<md-input-container class="inputWrapperBig">
 					<label>Grade</label>
 					<md-select id="gradeBox" name="grade" ng-model="student.grade" required>
-						<md-option ng-repeat="g in grades" value="{{g}}">{{g.split(' ')[0]}}</md-option>
+						<md-option ng-repeat="g in grades" ng-value="g">{{g.split(' ')[0]}}</md-option>
 					</md-select>
 					<div ng-messages="form.grade.$error">
 						<div ng-message="required">Grade is required.</div>
@@ -67,7 +67,7 @@
 				<md-input-container class="inputWrapperBig">
 					<label>Gender</label>
 					<md-select id="genderBox" name="gender" ng-model="student.gender" required>
-						<md-option ng-repeat="g in genders" value="{{g}}">{{g}}</md-option>
+						<md-option ng-repeat="g in genders" ng-value="g">{{g}}</md-option>
 					</md-select>
 					<div ng-messages="form.gender.$error">
 						<div ng-message="required">Gender is required.</div>
