--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -15,36 +15,48 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-messages.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
   		<script src="verify.js"></script>
 		<script src="gideonApp.js"></script>
 		<script src="homeCtrl.js"></script>
-		<script src="ripple.js"></script>
+		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
 		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
 		<link rel="stylesheet" type="text/css" href="HomeStyle.css">
 	</head>
 	<body>
 		<div class="exterior" ng-app="gideonApp" ng-controller="homeCtrl">
 			&nbsp;
-			<div whitecard>
+			<md-whiteframe class="md-whiteframe-10dp">
 				<img id="logo" src="img/gideon-logo-white.png" alt="Gideon">
 
-				<form id="loginBlock">
-					<input white big type="text"     id="username" name="username" placeholder="Username" ng-model="username" required>
-					<input white big type="password" id="password" name="password" placeholder="Password" ng-model="password" required>
+				<form id="loginBlock" name="form">
+					<md-input-container class="inputWrapperBig">
+						<label>Username</label>
+						<input md-select-on-focus type="text" id="username" name="username" ng-model="username" required>
+						<div ng-messages="form.username.$error">
+							<div ng-message="required">Please enter a username.</div>
+						</div>
+					</md-input-container>
+					<md-input-container class="inputWrapperBig">
+						<label>Password</label>
+						<input md-select-on-focus type="password" id="password" name="password" ng-model="password" required>
+						<div ng-messages="form.password.$error">
+							<div ng-message="required">Please enter a password.</div>
+						</div>
+					</md-input-container>
 					<br><br>
-					<button big type="submit" ng-click="login()">Log in</button>
+					<md-button big class="md-accent md-raised" type="submit" ng-click="login()">Log in</md-button>
 					<br><br><br>
-					<button invis big type="submit" ng-click="guest()">Proceed as Guest</button>
+					<md-button invis big type="submit" ng-click="guest()">Proceed as Guest</md-button>
 					<br><br>
 					<span ng-class="{'errorText':formStatus.id == 0, 'successText':formStatus.id == 1}">{{formStatus.text}}</span>
 				</form>
-			</div>
+			</md-whiteframe>
 		</div>
 	</body>
 </html>
