EditRecord Material Update
OK that one was more difficult than I expected

I tried to merge the record editing controllers because they share a lot of functionality

Turns out md-select doesn't quite call ng-change in the same way that select does, so issues arose

And I found out that the classes Master and Record, while being very similar, used different variable names for some things, so I changed those things

Turns out those changes broke a few more things, so I don't entirely know if this commit is safe to use - for now assume it's not

--- a/Front-end/EditRecord.html
+++ b/Front-end/EditRecord.html
@@ -11,11 +11,11 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
   		<script src="verify.js"></script>
   		<script src="gideonApp.js"></script>
-  		<script src="editRecordCtrl.js"></script>
-  		<script src="ripple.js"></script>
+  		<script src="updateRecordCtrl.js"></script>
+  		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -25,7 +25,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
 		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
 		<link rel="stylesheet" type="text/css" href="RecordStyle.css">
 	</head>
@@ -34,9 +34,9 @@
 			<div ng-include="'Header.html'"></div>
 		</div>
 
-		<div class="exterior" ng-controller="editRecordCtrl">
-			<button invis class="hoverable" id="backButton" onclick="location.href='RecordList.html'">Back to Record List</button>
-			<button warn class="hoverable" id="deleteButton" ng-click="removeRecord()">Delete Record</button>
+		<div class="exterior" ng-controller="updateRecordCtrl">
+			<md-button id="backButton" onclick="location.href='RecordList.html'">Back to Record List</md-button>
+			<md-button class="md-raised md-warn" id="deleteButton" ng-click="removeRecord()">Delete Record</md-button>
 
 			<h1>Edit Record</h1>
 			<!--Form for updating records that are already in the system-->
@@ -44,13 +44,15 @@
 				<div class="columnContainer" id="editSingleRow">
 					<div class="column" style="width:100%">
 					<!--Displays list of all current students upon selection, with a custom filter-->
-						<label for="client">Filter By Name: </label>
-						<input black id="textFilter" name="textFilter" type="text" ng-model="clientFilter">
-						<div class="inputWrapperBig">
-							<select white big id="clientSelect" name="client" ng-model="client" ng-options="v as v.name for v in names | filter: {name: clientFilter}" ng-change="setId()" required></select>
-							<div class="invalidContainer" ng-class="{'invalid':form.client.$touched && form.client.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.client.$touched && form.client.$invalid">Name is required.</span>
+						<md-autocomplete class="md-block" required md-require-match id="clientSelect" md-floating-label="Student" md-input-name="client" md-selected-item="client" md-search-text="clientSearch" md-items="item in filterStudents(clientSearch)" md-item-text="item.name">
+							<md-item-template>
+								<span md-highlight-text="clientSearch">{{item.name}}</span>
+							</md-item-template>
+							<div ng-messages="form.client.$error">
+								<div ng-message="required">Student is required.</div>
+								<div ng-message="md-require-match">Please select an existing student.</div>
+							</div>
+						</md-autocomplete>
 					</div>
 				</div>
 	          	<br><br>
@@ -58,35 +60,41 @@
 	          	<div class="columnContainer" id="editRow">
 		  			<!--Displays all possible book categories-->
 		  			<div class="threeColumn">
-						<label for="category">Book Category</label><br>
-						<div class="inputWrapperBig">
-							<select white big id="category" name="category" ng-model="record.category" ng-options="x for x in categories" ng-change="getSubcategories()" required>
-							</select>
-							<div class="invalidContainer" ng-class="{'invalid':form.category.$touched && form.category.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.category.$touched && form.category.$invalid">Category is required.</span>
+						<md-input-container class="md-block">
+							<label>Book Category</label>
+							<md-select id="category" name="category" ng-model="record.category" ng-change="getSubcategories()" required>
+								<md-option ng-repeat="x in categories" ng-value="x">{{x}}</md-option>
+							</md-select>
+							<div ng-messages="form.category.$error">
+								<div ng-message="required">All book details are required.</div>
+							</div>
+						</md-input-container>
 					</div>
 
 					<!--Displays all subcategories for a selected category-->
 					<div class="threeColumn">
-						<label for="subCategory">Book Sub-Category</label><br>
-						<div class="inputWrapperBig">
-							<select white big id="subCategory" name="subcategory" ng-model="record.subcategory" ng-options="y for y in subcategories" ng-change="getTitles()" required>
-							</select>
-							<div class="invalidContainer" ng-class="{'invalid':form.subcategory.$touched && form.subcategory.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.subcategory.$touched && form.subcategory.$invalid">Subcategory is required.</span>
+						<md-input-container class="md-block">
+							<label>Book Subcategory</label>
+							<md-select id="subcategory" name="subcategory" ng-model="record.subcategory" ng-change="getTitles()" required>
+								<md-option ng-repeat="y in subcategories" ng-value="y" ng-disabled="y.startsWith('Select')">{{y}}</option>
+							</md-select>
+							<div ng-messages="form.subcategory.$error">
+								<div ng-message="required">All book details are required.</div>
+							</div>
+						</md-input-container>
 					</div>
 
 					<!--Displays all book titles for a given subcategory-->
 					<div class="threeColumn">
-						<label for="title">Book Title</label><br>
-						<div class="inputWrapperBig">
-							<select white big id="title" name="title" ng-model="record.bookTitle" ng-options="z.title as z.display for z in titles" ng-change="didSetBook()" required>
-							</select>
-							<div class="invalidContainer" ng-class="{'invalid':form.title.$touched && form.title.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.title.$touched && form.title.$invalid">Book title is required.</span>
+						<md-input-container class="md-block">
+							<label>Book Title</label>
+							<md-select id="title" name="title" ng-model="record.title" ng-change="didSetBook()" required>
+								<md-option ng-repeat="z in titles" ng-value="z.title" ng-disabled="z.display.startsWith('Select')">{{z.display}}</option>
+							</md-select>
+							<div ng-messages="form.category.$error">
+								<div ng-message="required">All book details are required.</div>
+							</div>
+						</md-input-container>
 					</div>
 				</div>
 				<br><br>
@@ -94,24 +102,26 @@
 				<div class="columnContainer" id="editRow">
 					<!--Simple datePicker for instructors to enter the startDate-->
 					<div class="twoColumn">
-						<label for="dateSelect">Start Date</label><br>
-						<div class="inputWrapperBig">
-							<input white big type="date" name="startDate" id ="dateSelect" ng-model="record.startDate" required>
-							<div class="invalidContainer" ng-class="{'invalid':form.startDate.$touched && form.startDate.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.startDate.$touched && form.startDate.$error.required">Start date is required.</span>
-						<span class="errorText" ng-show="form.startDate.$touched && form.startDate.$error.date">This date is invalid.</span>
+						<md-input-container class="md-block">
+							<label>Start Date</label>
+							<md-datepicker name="startDate" id="dateSelect" ng-model="record.startDate" required></md-datepicker>
+							<div ng-messages="form.startDate.$error">
+								<div ng-message="required">Start date is required.</div>
+								<div ng-message="valid">This date is invalid.</div>
+							</div>
+						</md-input-container>
 					</div>
 
 					<!--Allows user to enter the ending date-->
 					<div class="twoColumn">
-						<label for="dateSelect">End Date</label><br>
-						<div class="inputWrapperBig">
-							<input white big type="date" name="endDate" id="dateSelect" min="{{record.startDate}}" ng-model="record.endDate">
-							<div class="invalidContainer" ng-class="{'invalid':form.endDate.$touched && form.endDate.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.endDate.$touched && form.endDate.$error.date">This date is invalid.</span>
-						<span class="errorText" ng-show="form.endDate.$touched && form.endDate.$error.min">The end date must come after the start date.</span>
+						<md-input-container class="md-block">
+							<label>End Date</label>
+							<md-datepicker name="endDate" id="dateSelect" md-min-date="record.startDate" ng-model="record.endDate"></md-datepicker>
+							<div ng-messages="form.startDate.$error">
+								<div ng-message="mindate">The end date must come after the start date.</div>
+								<div ng-message="valid">This date is invalid.</div>
+							</div>
+						</md-input-container>
 					</div>
 				</div>
 				<br><br>
@@ -119,46 +129,51 @@
 				<div class="columnContainer" id="editSingleRow">
 					<!--Simple number picker for instructors to enter the repetition number-->
 					<div id="rep">
-						<label for="reps">Repetition</label>
-						<div class="inputWrapper">
-							<input white type="number" name="reps" min="1" max="5" ng-model="record.rep" required>
-							<div class="invalidContainer" ng-class="{'invalid':form.reps.$touched && form.reps.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.reps.$touched && form.reps.$error.required">Repetition number is required.</span>
-						<span class="errorText" ng-show="form.reps.$touched && form.reps.$error.number">Repetition must be a number.</span>
-						<span class="errorText" ng-show="form.reps.$touched && (form.reps.$error.min || form.reps.$error.max)">Repetition number must be between 1 and 5.</span>
+						<md-input-container>
+							<label>Repetition</label>
+							<input type="number" name="reps" min="1" max="5" ng-model="record.rep" required>
+							<div ng-messages="form.reps.$error">
+								<div ng-message="required">Repetition number is required.</div>
+								<div ng-message="number">Repetition must be a number.</div>
+								<div ng-message-exp="['min', 'max']">Repetition number must be between 1 and 5.</div>
+							</div>
+						</md-input-container>
 					</div>
 
 					<!--Simple number picker for instructors to enter the test time-->
 					<div id="testTime" ng-show="record.test">
-						<label for="testTime">Test Time</label>
-						<div class="inputWrapper">
-							<input white type="number" name="testTime" min="0" max="1000" ng-model="record.testTime">
-							<div class="invalidContainer" ng-class="{'invalid':form.testTime.$touched && form.testTime.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.testTime.$touched && form.testTime.$error.number">Test time must be a number.</span>
-						<span class="errorText" ng-show="form.testTime.$touched && (form.testTime.$error.min || form.testTime.$error.max)">Test time must be between 0 and 1000.</span>
+						<md-input-container>
+							<label>Test Time</label>
+							<input type="number" name="testTime" min="0" max="1000" ng-model="record.testTime">
+							<div ng-messages="form.testTime.$error">
+								<div ng-message="number">Test time must be a number.</div>
+								<div ng-message-exp="['min', 'max']">Test time must be between 0 and 1000.</div>
+							</div>
+						</md-input-container>
 					</div>
 
 					<!--Simple number picker for instructors to enter the number of mistakes-->	
 					<div id="mistakes" ng-show="record.test">
-						<label for="mistakes">Mistakes</label>
-						<div class="inputWrapper">
-							<input white type="number" name="mistakes" min="0" max="1000" ng-model="record.mistakes">
-							<div class="invalidContainer" ng-class="{'invalid':form.mistakes.$touched && form.mistakes.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.mistakes.$touched && form.mistakes.$error.number">Mistakes must be a number.</span>
-						<span class="errorText" ng-show="form.mistakes.$touched && form.mistakes.$invalid">Mistake count must be between 0 and 1000.</span>
+						<md-input-container>
+							<label>Mistakes</label>
+							<input type="number" name="mistakes" min="0" max="1000" ng-model="record.mistakes">
+							<div ng-messages="form.mistakes.$error">
+								<div ng-message="number">Mistakes must be a number.</div>
+								<div ng-message-exp="['min', 'max']">Mistakes must be between 0 and 1000.</div>
+							</div>
+						</md-input-container>
 					</div>
 				</div>
 				<br><br>
 
-				<label for="notes" id="notes">Notes</label>
-					<textarea white rows="3" name="notes" id="notes" ng-model="record.notes"></textarea>
-				<br><br><br>
+				<md-input-container>
+					<label>Notes</label>
+					<textarea rows="3" name="notes" id="notes" ng-model="record.notes"></textarea>
+				</md-input-container>
+				<br>
 
 				<!--Submits form data-->
-				<button big ng-click="updateRecord()">Submit</button>
+				<md-button big class="md-accent md-raised" ng-click="editRecord()">Submit</md-button>
 			</form>
 			<br><br>
 			<span ng-class="{'errorText':formStatus.id == 0, 'successText':formStatus.id == 1}">{{formStatus.text}}</span>
