--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -14,7 +14,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
   		<script src="verify.js"></script>
   		<script src="gideonApp.js"></script>
-  		<script src="editStudentCtrl.js"></script>
+  		<script src="updateStudentCtrl.js"></script>
 		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
@@ -34,7 +34,7 @@
 			<div ng-include="'Header.html'"></div>
 		</div>
 
-		<div class="exterior" ng-controller="editStudentCtrl">
+		<div class="exterior" ng-controller="updateStudentCtrl">
 			<md-button id="backButton" onclick="location.href='StudentList.html'">Back to Student List</md-button>
 			<md-button class="md-raised md-warn" id="deleteButton" ng-click="removeStudent()">Delete Student</md-button>
 
@@ -58,6 +58,9 @@
 						<md-input-container class="inputWrapperBig">
 							<label>Email</label>
 							<input md-select-on-focus type="email" ng-model="student.email">
+							<div ng-messages="form.email.$error">
+								<div ng-message="valid">This must be a valid email.</div>
+							</div>
 						</md-input-container>
 					</div>
 				</div><br>
@@ -68,7 +71,7 @@
 						<md-input-container class="inputWrapperBig">
 							<label>Grade</label>
 							<md-select id="gradeBox" name="grade" ng-model="student.grade" required>
-								<md-option ng-repeat="g in grades" mg-value="g">{{g.split(' ')[0]}}</md-option>
+								<md-option ng-repeat="g in grades" ng-value="g">{{g.split(' ')[0]}}</md-option>
 							</md-select>
 							<div ng-messages="form.grade.$error">
 								<div ng-message="required">Grade is required.</div>
@@ -117,7 +120,7 @@
 				</div><br><br>
 
 				<!--Submit button to perform the update-->
-				<md-button big class="md-accent md-raised" ng-click="updateStudent()">Submit</md-button>
+				<md-button big class="md-accent md-raised" ng-click="editStudent()">Submit</md-button>
 			</form>
 			<br><br>
 			<span ng-class="{'errorText':formStatus.id == 0, 'successText':formStatus.id == 1}">{{formStatus.text}}</span>
