--- a/Front-end/InsertStudent.html
+++ b/Front-end/InsertStudent.html
@@ -14,7 +14,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
   		<script src="verify.js"></script>
   		<script src="gideonApp.js"></script>
-  		<script src="insertStudentCtrl.js"></script>
+  		<script src="updateStudentCtrl.js"></script>
 		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
@@ -35,7 +35,7 @@
 		</div>
 
 		
-		<div class="exterior" ng-controller="insertStudentCtrl">
+		<div class="exterior" ng-controller="updateStudentCtrl">
 			<md-button id="backButton" onclick="location.href='StudentList.html'">Back to Student List</md-button>
 
 			<h1>Insert Student</h1>
@@ -77,7 +77,7 @@
 
 				
 				<!--Submit button: runs the insertStudent function-->
-				<md-button big class="md-accent md-raised" ng-click="createStudent()">Submit</md-button>
+				<md-button big class="md-accent md-raised" ng-click="insertStudent()">Submit</md-button>
 			</form>
 			<br><br>
 			<span ng-class="{'errorText':formStatus.id == 0, 'successText':formStatus.id == 1}">{{formStatus.text}}</span>
