Lingering Console Log
Whoops that caused issues time to delete

--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -57,10 +57,7 @@
 			</div>
 
 			<!--Toggle for viewing only students with data, meant for testing-->
-			<div>
-				<h3>Display Only Students With Records</h3>
-				<md-switch class="md-primary" ng-model="dataSwitch" aria-label="Display Only Students with Records" ng-change="toggleData()"></md-switch>
-			</div>
+			<md-switch class="md-primary" ng-model="dataSwitch" aria-label="Display Only Students with Records" ng-change="toggleData()">Display Only Students With Records</md-switch>
 			<br><br>
 
 			<!--Header of table-->
